# gst-cepstrum

./: NOTICE  README.md  meson.build
src/: gstcepstrum.c  gstcepstrum.h
tests/examples/: cepstrum-example.c
